logs/kabaret.naming.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/kabaret'...
Listing './lib/python3.5/site-packages/kabaret/naming'...
Listing './lib/python3.5/site-packages/kabaret/naming/examples'...
Compiling './lib/python3.5/site-packages/kabaret/naming/examples/example_01.py'...
***   File "./lib/python3.5/site-packages/kabaret/naming/examples/example_01.py", line 141
    except kabaret.naming.FieldValueError, err:
                                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/kabaret/naming/fields'...
Compiling './lib/python3.5/site-packages/kabaret/naming/path.py'...
***   File "./lib/python3.5/site-packages/kabaret/naming/path.py", line 120
    except FieldValueError, err:
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/kabaret.naming-0.1.0b1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
